--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -26,7 +26,7 @@
     <module.name>${project.groupId}.warnings.ng</module.name>
 
     <analysis-model-api.version>10.14.0-rc603.a_b_050e7dfc2c</analysis-model-api.version>
-    <analysis-model-tests.version>10.14.0-rc4746.02007cc277a_d</analysis-model-tests.version>
+    <analysis-model-tests.version>10.13.0</analysis-model-tests.version>
     <pull-request-monitoring.version>1.7.8</pull-request-monitoring.version>
     <prism-api.version>1.28.0-2</prism-api.version>
 
