--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -25,8 +25,8 @@
     <changelist>-SNAPSHOT</changelist>
     <module.name>${project.groupId}.warnings.ng</module.name>
 
-    <analysis-model-api.version>10.14.0-rc603.a_b_050e7dfc2c</analysis-model-api.version>
-    <analysis-model-tests.version>10.13.0</analysis-model-tests.version>
+    <analysis-model-api.version>10.14.0</analysis-model-api.version>
+    <analysis-model-tests.version>${analysis-model-api.version}</analysis-model-tests.version>
     <pull-request-monitoring.version>1.7.8</pull-request-monitoring.version>
     <prism-api.version>1.28.0-2</prism-api.version>
 
@@ -587,47 +587,6 @@
           <execution>
             <id>spotbugs</id>
             <phase>none</phase>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <groupId>org.revapi</groupId>
-        <artifactId>revapi-maven-plugin</artifactId>
-        <configuration>
-          <failBuildOnProblemsFound>true</failBuildOnProblemsFound>
-          <pipelineConfiguration>
-            <transformBlocks>
-              <blok>
-                <item>manually-vetted</item>
-                <item>revapi.versions</item>
-              </blok>
-            </transformBlocks>
-          </pipelineConfiguration>
-          <analysisConfiguration>
-            <revapi.reporter.json>
-              <minSeverity>EQUIVALENT</minSeverity>
-              <minCriticality>allowed</minCriticality>
-              <output>target/revapi-result.json</output>
-              <indent>false</indent>
-              <append>false</append>
-              <keepEmptyFile>true</keepEmptyFile>
-            </revapi.reporter.json>
-            <revapi.differences id="manually-vetted">
-              <attachments>
-                <vetted>ok</vetted>
-              </attachments>
-              <differences combine.children="append">
-              </differences>
-            </revapi.differences>
-          </analysisConfiguration>
-        </configuration>
-        <executions>
-          <execution>
-            <id>run-revapi</id>
-            <goals>
-              <goal>check</goal>
-            </goals>
-            <phase>verify</phase>
           </execution>
         </executions>
       </plugin>
