Add `pluginRepositories` for PCT

--- a/ui-tests/pom.xml
+++ b/ui-tests/pom.xml
@@ -135,6 +135,13 @@
     </profile>
   </profiles>
 
+  <pluginRepositories>
+    <pluginRepository>
+      <id>repo.jenkins-ci.org</id>
+      <url>https://repo.jenkins-ci.org/public/</url>
+    </pluginRepository>
+  </pluginRepositories>
+
   <build>
     <plugins>
       <plugin>
