--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,13 @@
     <maven.compiler.target>${java.version}</maven.compiler.target>
   </properties>
 
+  <pluginRepositories>
+    <pluginRepository>
+      <id>repo.jenkins-ci.org</id>
+      <url>https://repo.jenkins-ci.org/public/</url>
+    </pluginRepository>
+  </pluginRepositories>
+
   <build>
     <plugins>
       <!-- Do not deploy anything except for the plugin -->
