--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -25,6 +25,8 @@
     <changelist>-SNAPSHOT</changelist>
     <module.name>${project.groupId}.warnings.ng</module.name>
 
+    <jenkins.baseline>2.332.4</jenkins.baseline>
+
     <analysis-model-api.version>10.16.0</analysis-model-api.version>
     <analysis-model-tests.version>${analysis-model-api.version}</analysis-model-tests.version>
     <pull-request-monitoring.version>1.7.8</pull-request-monitoring.version>
@@ -51,8 +53,6 @@
 
     <!-- Maven Surefire ArgLine -->
     <argLine>-Djava.awt.headless=true -Xmx1024m -Djenkins.test.timeout=1000</argLine>
-
-    <jenkins.version>2.332</jenkins.version>
   </properties>
 
   <licenses>
