--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -25,7 +25,8 @@
     <changelist>-SNAPSHOT</changelist>
     <module.name>${project.groupId}.warnings.ng</module.name>
 
-    <jenkins.baseline>2.332.4</jenkins.baseline>
+    <jenkins.baseline>2.332</jenkins.baseline>
+    <jenkins.version>2.332.4</jenkins.version>
 
     <analysis-model-api.version>10.16.0</analysis-model-api.version>
     <analysis-model-tests.version>${analysis-model-api.version}</analysis-model-tests.version>
