Ignore Revapi warnings about recent changes in Jenkins 2.346.

--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -594,6 +594,37 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+        <groupId>org.revapi</groupId>
+        <artifactId>revapi-maven-plugin</artifactId>
+        <configuration>
+          <failBuildOnProblemsFound>false</failBuildOnProblemsFound>
+          <analysisConfiguration>
+            <revapi.differences id="manually-vetted">
+              <differences combine.children="append">
+                <item>
+                  <ignore>true</ignore>
+                  <regex>true</regex>
+                  <classQualifiedName>(org.jenkinsci.*|com.google.*)</classQualifiedName>
+                  <code>java.annotation.*</code>
+                </item>
+                <item>
+                  <ignore>true</ignore>
+                  <regex>true</regex>
+                  <classQualifiedName>jenkins.model.*</classQualifiedName>
+                  <code>java.field.removed</code>
+                </item>
+                <item>
+                  <ignore>true</ignore>
+                  <regex>true</regex>
+                  <classQualifiedName>jenkins.model.*</classQualifiedName>
+                  <code>java.class.externalClassExposedInAPI</code>
+                </item>
+              </differences>
+            </revapi.differences>
+          </analysisConfiguration>
+        </configuration>
+      </plugin>
     </plugins>
     <pluginManagement>
       <plugins>
