--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Generate coverage with JaCoCo
         env:
           BROWSER: firefox-container
-        run: mvn -V -ntp clean verify jacoco:prepare-agent test integration-test jacoco:report --file plugin/pom.xml '-Dgpg.skip'
+        run: mvn -V --color always -ntp clean verify jacoco:prepare-agent test integration-test jacoco:report --file plugin/pom.xml '-Dgpg.skip'
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3.1.0
