--- a/.github/workflows/ui-tests.yml
+++ b/.github/workflows/ui-tests.yml
@@ -21,11 +21,11 @@ jobs:
           check-latest: true
           cache: 'maven'
       - name: Build warnings plugin and download dependencies
-        run: mvn -V -ntp verify -Pskip --file plugin/pom.xml -Dgpg.skip
+        run: mvn -V --color always -ntp verify -Pskip --file plugin/pom.xml -Dgpg.skip
       - name: Run UI tests for the details tabs
         env:
           BROWSER: firefox-container
-        run: mvn -V -ntp test --file ui-tests/pom.xml -Dtest=DetailsTabUiTest -Dgpg.skip -Dsurefire.rerunFailingTestsCount=1
+        run: mvn -V --color always -ntp test --file ui-tests/pom.xml -Dtest=DetailsTabUiTest -Dgpg.skip -Dsurefire.rerunFailingTestsCount=1
 
   dashboard-view:
     runs-on: [ubuntu-latest]
@@ -41,11 +41,11 @@ jobs:
           check-latest: true
           cache: 'maven'
       - name: Build warnings plugin and download dependencies
-        run: mvn -V -ntp verify -Pskip --file plugin/pom.xml -Dgpg.skip
+        run: mvn -V --color always -ntp verify -Pskip --file plugin/pom.xml -Dgpg.skip
       - name: Run UI tests for the dashboard view
         env:
           BROWSER: firefox-container
-        run: mvn -V -ntp test --file ui-tests/pom.xml -Dtest=DashboardViewPortletUiTest -Dgpg.skip -Dsurefire.rerunFailingTestsCount=1
+        run: mvn -V --color always -ntp test --file ui-tests/pom.xml -Dtest=DashboardViewPortletUiTest -Dgpg.skip -Dsurefire.rerunFailingTestsCount=1
 
   freestyle-configuration:
     runs-on: [ubuntu-latest]
@@ -61,11 +61,11 @@ jobs:
           check-latest: true
           cache: 'maven'
       - name: Build warnings plugin and download dependencies
-        run: mvn -V -ntp verify -Pskip --file plugin/pom.xml -Dgpg.skip
+        run: mvn -V --color always -ntp verify -Pskip --file plugin/pom.xml -Dgpg.skip
       - name: Run UI tests for the freestyle configuration
         env:
           BROWSER: firefox-container
-        run: mvn -V -ntp test --file ui-tests/pom.xml -Dtest=FreeStyleConfigurationUiTest -Dgpg.skip -Dsurefire.rerunFailingTestsCount=1
+        run: mvn -V --color always -ntp test --file ui-tests/pom.xml -Dtest=FreeStyleConfigurationUiTest -Dgpg.skip -Dsurefire.rerunFailingTestsCount=1
 
   pipeline-snippet-generator:
     runs-on: [ubuntu-latest]
@@ -81,11 +81,11 @@ jobs:
           check-latest: true
           cache: 'maven'
       - name: Build warnings plugin and download dependencies
-        run: mvn -V -ntp verify -Pskip --file plugin/pom.xml -Dgpg.skip
+        run: mvn -V --color always -ntp verify -Pskip --file plugin/pom.xml -Dgpg.skip
       - name: Run UI tests for the pipeline snippet configurator
         env:
           BROWSER: firefox-container
-        run: mvn -V -ntp test --file ui-tests/pom.xml -Dtest=SnippetGeneratorUiTest -Dgpg.skip -Dsurefire.rerunFailingTestsCount=1
+        run: mvn -V --color always -ntp test --file ui-tests/pom.xml -Dtest=SnippetGeneratorUiTest -Dgpg.skip -Dsurefire.rerunFailingTestsCount=1
 
   global-configuration:
     runs-on: [ubuntu-latest]
@@ -101,11 +101,11 @@ jobs:
           check-latest: true
           cache: 'maven'
       - name: Build warnings plugin and download dependencies
-        run: mvn -V -ntp verify -Pskip --file plugin/pom.xml -Dgpg.skip
+        run: mvn -V --color always -ntp verify -Pskip --file plugin/pom.xml -Dgpg.skip
       - name: Run UI tests for Jenkins' global configuration
         env:
           BROWSER: firefox-container
-        run: mvn -V -ntp test --file ui-tests/pom.xml -Dtest=GlobalConfigurationUiTest -Dgpg.skip -Dsurefire.rerunFailingTestsCount=1
+        run: mvn -V --color always -ntp test --file ui-tests/pom.xml -Dtest=GlobalConfigurationUiTest -Dgpg.skip -Dsurefire.rerunFailingTestsCount=1
 
   issues-column:
     runs-on: [ubuntu-latest]
@@ -121,11 +121,11 @@ jobs:
           check-latest: true
           cache: 'maven'
       - name: Build warnings plugin and download dependencies
-        run: mvn -V -ntp verify -Pskip --file plugin/pom.xml -Dgpg.skip
+        run: mvn -V --color always -ntp verify -Pskip --file plugin/pom.xml -Dgpg.skip
       - name: Run UI tests for the issues column
         env:
           BROWSER: firefox-container
-        run: mvn -V -ntp test --file ui-tests/pom.xml -Dtest=IssuesColumnUiTest -Dgpg.skip -Dsurefire.rerunFailingTestsCount=1
+        run: mvn -V --color always -ntp test --file ui-tests/pom.xml -Dtest=IssuesColumnUiTest -Dgpg.skip -Dsurefire.rerunFailingTestsCount=1
 
   trend-charts:
     runs-on: [ubuntu-latest]
@@ -141,11 +141,11 @@ jobs:
           check-latest: true
           cache: 'maven'
       - name: Build warnings plugin and download dependencies
-        run: mvn -V -ntp verify -Pskip --file plugin/pom.xml -Dgpg.skip
+        run: mvn -V --color always -ntp verify -Pskip --file plugin/pom.xml -Dgpg.skip
       - name: Run UI tests for the trend charts
         env:
           BROWSER: firefox-container
-        run: mvn -V -ntp test --file ui-tests/pom.xml -Dtest=TrendChartsUiTest -Dgpg.skip -Dsurefire.rerunFailingTestsCount=1
+        run: mvn -V --color always -ntp test --file ui-tests/pom.xml -Dtest=TrendChartsUiTest -Dgpg.skip -Dsurefire.rerunFailingTestsCount=1
 
   miscellaneous:
     runs-on: [ubuntu-latest]
@@ -161,9 +161,9 @@ jobs:
           check-latest: true
           cache: 'maven'
       - name: Build warnings plugin and download dependencies
-        run: mvn -V -ntp verify -Pskip --file plugin/pom.xml -Dgpg.skip
+        run: mvn -V --color always -ntp verify -Pskip --file plugin/pom.xml -Dgpg.skip
       - name: Run miscellaneous UI tests of the warnings plugin
         env:
           BROWSER: firefox-container
-        run: mvn -V -ntp test --file ui-tests/pom.xml -Dtest=TrendChartsUiTest -Dgpg.skip -Dsurefire.rerunFailingTestsCount=1
+        run: mvn -V --color always -ntp test --file ui-tests/pom.xml -Dtest=TrendChartsUiTest -Dgpg.skip -Dsurefire.rerunFailingTestsCount=1
 
