--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -101,6 +101,7 @@
     <dependency>
       <groupId>io.jenkins.plugins</groupId>
       <artifactId>plugin-util-api</artifactId>
+      <version>2.19.0-rc597.d541a_a_45ed99</version>
     </dependency>
     <dependency>
       <groupId>io.jenkins.plugins</groupId>
