suppress logging with optional param

--- a/plugin/src/test/resources/io/jenkins/plugins/analysis/warnings/integrations/job-dsl-warnings-ng.yaml
+++ b/plugin/src/test/resources/io/jenkins/plugins/analysis/warnings/integrations/job-dsl-warnings-ng.yaml
@@ -8,6 +8,7 @@ jobs:
                     blameDisabled(true)
                     forensicsDisabled(true)
                     enabledForFailure(true)
+                    quiet(false)
                     healthy(10)
                     ignoreFailedBuilds(false)
                     ignoreQualityGate(true)
