Add checkbox for new quiet property.

--- a/plugin/src/main/resources/issues/recorder.properties
+++ b/plugin/src/main/resources/issues/recorder.properties
@@ -4,3 +4,5 @@ description.tool=Select one or more static analysis tools.
 title.enabledForFailure=Enable recording for failed builds
 
 title.aggregatingResults=Aggregate results of all tools into a single result
+
+title.quiet=Quiet output to console log - only show errors
