--- a/plugin/src/main/resources/io/jenkins/plugins/analysis/core/steps/PublishIssuesStep/config.properties
+++ b/plugin/src/main/resources/io/jenkins/plugins/analysis/core/steps/PublishIssuesStep/config.properties
@@ -4,3 +4,4 @@ title.name=Custom Name
 description.name=Optional custom display name of the tool, overwrites the default name of the registered tool.
 title.id=Custom ID
 description.id=Optional custom ID (URL) of this tool, overwrites the default ID of the registered tool.
+title.quiet=Quiet output to console log - only show errors
