--- a/plugin/src/main/resources/issues/recorder.properties
+++ b/plugin/src/main/resources/issues/recorder.properties
@@ -5,4 +5,4 @@ title.enabledForFailure=Enable recording for failed builds
 
 title.aggregatingResults=Aggregate results of all tools into a single result
 
-title.quiet=Quiet output to console log - only show errors
+title.quiet=Quiet output to console log - logging messages are then only visible in the messages view of the warnings plugin
