Introduce field to exclude suppressed or justified issues

--- a/plugin/src/main/resources/io/jenkins/plugins/analysis/warnings/axivion/AxivionSuite/config.properties
+++ b/plugin/src/main/resources/io/jenkins/plugins/analysis/warnings/axivion/AxivionSuite/config.properties
@@ -6,3 +6,5 @@ title.credentialsId=Credentials ID
 description.credentialsId=The ID of the credentials (as stored in Jenkins credential store) used for authentication against the Axivion Server.
 title.namedFilter=Named Filter
 description.namedFilter=Named Filters are stored filter and sorter configurations that store column filters and sorters and the path filter. The named filter id should be used here (e.g. p_show_all) not the display name. Only named filters supported by all issue kinds should be used. Requires Axivion Dashboard 7.2.0+.
+title.ignoreSuppressedOrJustified=Ignore Suppressed or Justified Issues
+description.ignoreSuppressedOrJustified=Ignore reporting of issues which are suppressed via code comments and/or justified in the Web UI.
