--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.jvnet.hudson.plugins</groupId>
     <artifactId>analysis-pom</artifactId>
-    <version>5.37.0</version>
+    <version>6.0.0</version>
     <relativePath />
   </parent>
 
@@ -51,7 +51,7 @@
 
     <!-- Maven Surefire ArgLine -->
     <argLine>-Djava.awt.headless=true -Xmx1024m -Djenkins.test.timeout=1000 --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.io=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.util.concurrent=ALL-UNNAMED</argLine>
-    <plugin-util-api.version>2.20.0</plugin-util-api.version>
+    <plugin-util-api.version>3.0.0-rc671.616d7b_b_f88a_0</plugin-util-api.version>
   </properties>
 
   <licenses>
