--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -51,9 +51,16 @@
     <!-- Maven Surefire ArgLine -->
     <argLine>-Djava.awt.headless=true -Xmx1024m -Djenkins.test.timeout=1000 --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.io=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.util.concurrent=ALL-UNNAMED</argLine>
 
-    <prism-api.version>1.29.0-3-rc205.6b_6980cca_b_76</prism-api.version>
+    <echarts-api.version>5.4.0-2-rc782.9c5f6d6f6eeb_</echarts-api.version>
+    <prism-api.version>1.29.0-3-rc207.f000c20b_dea_5</prism-api.version>
     <plugin-util-api.version>3.0.0-rc693.c098b_871ea_49</plugin-util-api.version>
     <forensics-api.version>2.0.0-rc1380.c93c627cd828</forensics-api.version>
+
+    <jquery3-api.version>3.6.3-1-rc365.70899fb_d9e1d</jquery3-api.version>
+    <plugin-util-api.version>3.0.0-rc693.c098b_871ea_49</plugin-util-api.version>
+    <bootstrap5-api.version>5.2.2-1-rc442.6631330fec41</bootstrap5-api.version>
+    <font-awesome-api.version>6.3.0-1-rc517.f6b_6e5a_dd4ef</font-awesome-api.version>
+    <data-tables-api.version>1.13.3-1-rc820.45d6725d5802</data-tables-api.version>
 
   </properties>
 
@@ -110,24 +117,27 @@
     <dependency>
       <groupId>io.jenkins.plugins</groupId>
       <artifactId>font-awesome-api</artifactId>
-      <version>6.2.1-1</version>
+      <version>${font-awesome-api.version}</version>
     </dependency>
     <dependency>
       <groupId>io.jenkins.plugins</groupId>
       <artifactId>bootstrap5-api</artifactId>
-      <version>5.2.1-2</version>
+      <version>${bootstrap5-api.version}</version>
     </dependency>
     <dependency>
       <groupId>io.jenkins.plugins</groupId>
       <artifactId>jquery3-api</artifactId>
+      <version>${jquery3-api.version}</version>
     </dependency>
     <dependency>
       <groupId>io.jenkins.plugins</groupId>
       <artifactId>echarts-api</artifactId>
+      <version>${echarts-api.version}</version>
     </dependency>
     <dependency>
       <groupId>io.jenkins.plugins</groupId>
       <artifactId>data-tables-api</artifactId>
+      <version>${data-tables-api.version}</version>
     </dependency>
     <dependency>
       <groupId>io.jenkins.plugins</groupId>
