--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -52,11 +52,11 @@
     <argLine>-Djava.awt.headless=true -Xmx1024m -Djenkins.test.timeout=1000 --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.io=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.util.concurrent=ALL-UNNAMED</argLine>
 
     <prism-api.version>1.29.0-3-rc207.f000c20b_dea_5</prism-api.version>
-    <plugin-util-api.version>3.0.0-rc693.c098b_871ea_49</plugin-util-api.version>
+    <plugin-util-api.version>3.0.0</plugin-util-api.version>
     <forensics-api.version>2.0.0-rc1380.c93c627cd828</forensics-api.version>
 
     <jquery3-api.version>3.6.3-1</jquery3-api.version>
-    <plugin-util-api.version>3.0.0-rc693.c098b_871ea_49</plugin-util-api.version>
+    <plugin-util-api.version>3.0.0</plugin-util-api.version>
     <bootstrap5-api.version>5.2.2-1-rc442.6631330fec41</bootstrap5-api.version>
     <font-awesome-api.version>6.3.0-1-rc517.f6b_6e5a_dd4ef</font-awesome-api.version>
     <data-tables-api.version>1.13.3-1-rc820.45d6725d5802</data-tables-api.version>
