--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -60,7 +60,7 @@
     <bootstrap5-api.version>5.2.2-1</bootstrap5-api.version>
     <font-awesome-api.version>6.3.0-1</font-awesome-api.version>
     <data-tables-api.version>1.13.3-1</data-tables-api.version>
-    <echarts-api.version>5.4.0-2-rc782.9c5f6d6f6eeb_</echarts-api.version>
+    <echarts-api.version>5.4.0-2</echarts-api.version>
 
   </properties>
 
