--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -51,7 +51,7 @@
     <!-- Maven Surefire ArgLine -->
     <argLine>-Djava.awt.headless=true -Xmx1024m -Djenkins.test.timeout=1000 --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.io=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.util.concurrent=ALL-UNNAMED</argLine>
 
-    <prism-api.version>1.29.0-3-rc207.f000c20b_dea_5</prism-api.version>
+    <prism-api.version>1.29.0-3</prism-api.version>
     <plugin-util-api.version>3.0.0</plugin-util-api.version>
     <forensics-api.version>2.0.0-rc1380.c93c627cd828</forensics-api.version>
 
