--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -42,7 +42,7 @@
 
     <!-- Jenkins Plug-in Dependencies Versions -->
     <autograding.version>3.3.1</autograding.version>
-    <git-forensics.version>1.11.0</git-forensics.version>
+    <git-forensics.version>2.0.0</git-forensics.version>
     <jenkins-maven-plugin.version>3.20</jenkins-maven-plugin.version>
     <job-dsl.version>1.81</job-dsl.version>
     <flexible-publish.version>0.15.2</flexible-publish.version>
@@ -52,8 +52,8 @@
     <argLine>-Djava.awt.headless=true -Xmx1024m -Djenkins.test.timeout=1000 --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.io=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.util.concurrent=ALL-UNNAMED</argLine>
 
     <prism-api.version>1.29.0-3</prism-api.version>
-    <plugin-util-api.version>3.0.0</plugin-util-api.version>
-    <forensics-api.version>2.0.0-rc1380.c93c627cd828</forensics-api.version>
+    <plugin-util-api.version>3.1.0</plugin-util-api.version>
+    <forensics-api.version>2.0.0</forensics-api.version>
 
     <jquery3-api.version>3.6.3-1</jquery3-api.version>
     <plugin-util-api.version>3.0.0</plugin-util-api.version>
