--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -25,8 +25,8 @@
     <changelist>-SNAPSHOT</changelist>
     <module.name>${project.groupId}.warnings.ng</module.name>
 
-    <analysis-model-api.version>11.0.0-rc645.3b_6973434c0b</analysis-model-api.version>
-    <analysis-model-tests.version>11.0.0-rc4947.d37dc2873c20</analysis-model-tests.version>
+    <analysis-model-api.version>11.0.0</analysis-model-api.version>
+    <analysis-model-tests.version>11.0.0</analysis-model-tests.version>
     <pull-request-monitoring.version>1.7.8</pull-request-monitoring.version>
 
     <eclipse-collections.version>9.2.0</eclipse-collections.version>
