--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -12,7 +12,7 @@
   <artifactId>warnings-ng</artifactId>
   <packaging>hpi</packaging>
   <name>Warnings Next Generation Plugin</name>
-  <version>10.0.1</version>
+  <version>${revision}${changelist}</version>
 
   <description>Collects compiler warnings or issues reported by static analysis
     tools and visualizes the results. It has built-in support for numerous static analysis tools (including several
@@ -21,7 +21,7 @@
   <url>https://github.com/jenkinsci/warnings-ng-plugin</url>
 
   <properties>
-    <revision>10.0.1</revision>
+    <revision>10.0.2</revision>
     <changelist>-SNAPSHOT</changelist>
     <module.name>${project.groupId}.warnings.ng</module.name>
 
@@ -706,7 +706,7 @@
     <connection>scm:git:https://github.com/jenkinsci/${project.artifactId}-plugin.git</connection>
     <developerConnection>scm:git:git@github.com:jenkinsci/${project.artifactId}-plugin.git</developerConnection>
     <url>https://github.com/jenkinsci/${project.artifactId}-plugin</url>
-    <tag>v10.0.1</tag>
+    <tag>${scmTag}</tag>
   </scm>
 
   <repositories>
