Revert Selenium 4 changes.

--- a/ui-tests/pom.xml
+++ b/ui-tests/pom.xml
@@ -40,7 +40,7 @@
     <dependency>
       <groupId>org.jenkins-ci</groupId>
       <artifactId>acceptance-test-harness</artifactId>
-      <version>5509.v07855a_003fc1</version>
+      <version>5504.v485694f31cdf</version>
     </dependency>
     <dependency>
       <groupId>org.apache.httpcomponents</groupId>
