Add SCM section to `pom.xml`

--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,13 @@
     <maven.compiler.target>${java.version}</maven.compiler.target>
   </properties>
 
+  <scm child.scm.connection.inherit.append.path="false" child.scm.developerConnection.inherit.append.path="false" child.scm.url.inherit.append.path="false">
+    <connection>scm:git:https://github.com/jenkinsci/warnings-ng-plugin.git</connection>
+    <developerConnection>scm:git:git@github.com:jenkinsci/warnings-ng-plugin.git</developerConnection>
+    <url>https://github.com/jenkinsci/warnings-ng-plugin</url>
+    <tag>${scmTag}</tag>
+  </scm>
+
   <pluginRepositories>
     <pluginRepository>
       <id>repo.jenkins-ci.org</id>
