--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -25,7 +25,7 @@
     <changelist>-SNAPSHOT</changelist>
     <module.name>${project.groupId}.warnings.ng</module.name>
 
-    <analysis-model-api.version>https://repo.jenkins-ci.org/incrementals/io/jenkins/plugins/analysis-model-api/11.1.0-rc684.c3c88b_b_ca_fd7c</analysis-model-api.version>
+    <analysis-model-api.version>11.1.0-rc684.c3c88b_b_ca_fd7</analysis-model-api.version>
     <analysis-model-tests.version>${analysis-model-api.version}</analysis-model-tests.version>
     <pull-request-monitoring.version>1.7.8</pull-request-monitoring.version>
 
@@ -250,7 +250,7 @@
       <artifactId>analysis-model</artifactId>
       <version>${analysis-model-tests.version}</version>
       <classifier>tests</classifier>
-      <scope>test</scope>
+      <scope>compile</scope>
       <exclusions>
         <exclusion>
           <groupId>edu.hm.hafner</groupId>
