Use ATH snapshot 999999-20230323.135212-4.
See https://github.com/jenkinsci/acceptance-test-harness/pull/1077#issuecomment-1481239618

--- a/ui-tests/pom.xml
+++ b/ui-tests/pom.xml
@@ -48,7 +48,7 @@
     <dependency>
       <groupId>org.jenkins-ci</groupId>
       <artifactId>acceptance-test-harness</artifactId>
-      <version>5509.v07855a_003fc1</version>
+      <version>999999-20230323.135212-4</version>
     </dependency>
     <dependency>
       <groupId>org.apache.httpcomponents</groupId>
