--- a/ui-tests/pom.xml
+++ b/ui-tests/pom.xml
@@ -16,10 +16,10 @@
   <name>UI Tests of Warnings Plugin</name>
 
   <properties>
-    <jenkins.version>2.390</jenkins.version>
-    <hpi-plugin.version>3.38</hpi-plugin.version>
+    <jenkins.version>2.400</jenkins.version>
+    <hpi-plugin.version>3.43</hpi-plugin.version>
     <json-smart.version>2.3</json-smart.version>
-    <json-unit-assertj.version>2.36.1</json-unit-assertj.version>
+    <json-unit-assertj.version>2.37.0</json-unit-assertj.version>
     <module.name>${project.groupId}.warnings.ui.tests</module.name>
 
     <!-- Maven Surefire ArgLine -->
@@ -48,7 +48,13 @@
     <dependency>
       <groupId>org.jenkins-ci</groupId>
       <artifactId>acceptance-test-harness</artifactId>
-      <version>5523.vd392288d2b_22</version>
+      <version>5581.vfd8e43f46a_03</version>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.15.0</version>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.httpcomponents</groupId>
@@ -228,7 +234,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-help-plugin</artifactId>
-        <version>3.3.0</version>
+        <version>3.4.0</version>
         <executions>
           <execution>
             <id>show-profiles</id>
