--- a/.github/workflows/ui-tests.yml
+++ b/.github/workflows/ui-tests.yml
@@ -24,7 +24,7 @@ jobs:
         run: mvn -V --color always -ntp verify -Pskip --file plugin/pom.xml -Dgpg.skip
       - name: Run UI tests for the details tabs
         env:
-          BROWSER: firefox-container
+          BROWSER: chrome-container
         run: mvn -V --color always -ntp test --file ui-tests/pom.xml -Dtest=DetailsTabUiTest -Dgpg.skip -Dsurefire.rerunFailingTestsCount=1
 
   dashboard-view:
@@ -44,7 +44,7 @@ jobs:
         run: mvn -V --color always -ntp verify -Pskip --file plugin/pom.xml -Dgpg.skip
       - name: Run UI tests for the dashboard view
         env:
-          BROWSER: firefox-container
+          BROWSER: chrome-container
         run: mvn -V --color always -ntp test --file ui-tests/pom.xml -Dtest=DashboardViewPortletUiTest -Dgpg.skip -Dsurefire.rerunFailingTestsCount=1
 
   freestyle-configuration:
@@ -64,7 +64,7 @@ jobs:
         run: mvn -V --color always -ntp verify -Pskip --file plugin/pom.xml -Dgpg.skip
       - name: Run UI tests for the freestyle configuration
         env:
-          BROWSER: firefox-container
+          BROWSER: chrome-container
         run: mvn -V --color always -ntp test --file ui-tests/pom.xml -Dtest=FreeStyleConfigurationUiTest -Dgpg.skip -Dsurefire.rerunFailingTestsCount=1
 
   pipeline-snippet-generator:
@@ -84,7 +84,7 @@ jobs:
         run: mvn -V --color always -ntp verify -Pskip --file plugin/pom.xml -Dgpg.skip
       - name: Run UI tests for the pipeline snippet configurator
         env:
-          BROWSER: firefox-container
+          BROWSER: chrome-container
         run: mvn -V --color always -ntp test --file ui-tests/pom.xml -Dtest=SnippetGeneratorUiTest -Dgpg.skip -Dsurefire.rerunFailingTestsCount=1
 
   global-configuration:
@@ -104,7 +104,7 @@ jobs:
         run: mvn -V --color always -ntp verify -Pskip --file plugin/pom.xml -Dgpg.skip
       - name: Run UI tests for Jenkins' global configuration
         env:
-          BROWSER: firefox-container
+          BROWSER: chrome-container
         run: mvn -V --color always -ntp test --file ui-tests/pom.xml -Dtest=GlobalConfigurationUiTest -Dgpg.skip -Dsurefire.rerunFailingTestsCount=1
 
   issues-column:
@@ -124,7 +124,7 @@ jobs:
         run: mvn -V --color always -ntp verify -Pskip --file plugin/pom.xml -Dgpg.skip
       - name: Run UI tests for the issues column
         env:
-          BROWSER: firefox-container
+          BROWSER: chrome-container
         run: mvn -V --color always -ntp test --file ui-tests/pom.xml -Dtest=IssuesColumnUiTest -Dgpg.skip -Dsurefire.rerunFailingTestsCount=1
 
   trend-charts:
@@ -144,7 +144,7 @@ jobs:
         run: mvn -V --color always -ntp verify -Pskip --file plugin/pom.xml -Dgpg.skip
       - name: Run UI tests for the trend charts
         env:
-          BROWSER: firefox-container
+          BROWSER: chrome-container
         run: mvn -V --color always -ntp test --file ui-tests/pom.xml -Dtest=TrendChartsUiTest -Dgpg.skip -Dsurefire.rerunFailingTestsCount=1
 
   miscellaneous:
@@ -164,6 +164,6 @@ jobs:
         run: mvn -V --color always -ntp verify -Pskip --file plugin/pom.xml -Dgpg.skip
       - name: Run miscellaneous UI tests of the warnings plugin
         env:
-          BROWSER: firefox-container
+          BROWSER: chrome-container
         run: mvn -V --color always -ntp test --file ui-tests/pom.xml -Dtest=TrendChartsUiTest -Dgpg.skip -Dsurefire.rerunFailingTestsCount=1
 
