Make trend charts theme-aware.
Use colors from the new Echarts `JenkinsPalette` for trend charts.

--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -118,6 +118,7 @@
     <dependency>
       <groupId>io.jenkins.plugins</groupId>
       <artifactId>echarts-api</artifactId>
+      <version>5.4.0-4-rc815.a_ff2e0060885</version>
     </dependency>
     <dependency>
       <groupId>io.jenkins.plugins</groupId>
