--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -118,7 +118,7 @@
     <dependency>
       <groupId>io.jenkins.plugins</groupId>
       <artifactId>echarts-api</artifactId>
-      <version>5.4.0-4-rc815.a_ff2e0060885</version>
+      <version>5.4.0-4-rc819.ef2a_8d3f99c8</version>
     </dependency>
     <dependency>
       <groupId>io.jenkins.plugins</groupId>
