--- a/.github/workflows/ui-tests.yml
+++ b/.github/workflows/ui-tests.yml
@@ -115,7 +115,7 @@ jobs:
       - name: Run UI tests for the issues column
         run: mvn -V --color always -ntp test --file ui-tests/pom.xml -Dtest=IssuesColumnUiTest -Dgpg.skip -Dsurefire.rerunFailingTestsCount=1
 
-  trend-charts:
+  trend-charts-1:
     runs-on: [ubuntu-latest]
     name: Trend charts UI tests
 
@@ -131,7 +131,25 @@ jobs:
       - name: Build warnings plugin and download dependencies
         run: mvn -V --color always -ntp verify -Pskip --file plugin/pom.xml -Dgpg.skip
       - name: Run UI tests for the trend charts
-        run: mvn -V --color always -ntp test --file ui-tests/pom.xml -Dtest=TrendChartsUiTest -Dgpg.skip -Dsurefire.rerunFailingTestsCount=1
+        run: mvn -V --color always -ntp test --file ui-tests/pom.xml -Dtest=TrendChartsUiTest#shouldDisplayDifferentTrendChartsOnClick -Dgpg.skip -Dsurefire.rerunFailingTestsCount=1
+
+  trend-charts-2:
+    runs-on: [ubuntu-latest]
+    name: Trend charts UI tests
+
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up JDK 11
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '11'
+          check-latest: true
+          cache: 'maven'
+      - name: Build warnings plugin and download dependencies
+        run: mvn -V --color always -ntp verify -Pskip --file plugin/pom.xml -Dgpg.skip
+      - name: Run UI tests for the trend charts
+        run: mvn -V --color always -ntp test --file ui-tests/pom.xml -Dtest=TrendChartsUiTest#shouldShowTrendChartsWithCorrectResults -Dgpg.skip -Dsurefire.rerunFailingTestsCount=1
 
   miscellaneous:
     runs-on: [ubuntu-latest]
