--- a/.github/workflows/enforce-labels.yml
+++ b/.github/workflows/enforce-labels.yml
@@ -1,14 +1,17 @@
-name: 'Enforce PR labels'
-
+name: Enforce PR labels
 on:
   pull_request:
-    types: [labeled, unlabeled, opened, edited, synchronize]
+    types: [opened, labeled, unlabeled, synchronize]
 jobs:
-  enforce-label:
+  label:
     runs-on: ubuntu-latest
+    permissions:
+      issues: write
+      pull-requests: write
     steps:
-      - uses: yogevbd/enforce-label-action@2.2.2
+      - uses: mheap/github-action-required-labels@v5
         with:
-          REQUIRED_LABELS_ANY: 'bug,feature,enhancement,deprecated,removed,tests,documentation,internal,dependencies'
-          REQUIRED_LABELS_ANY_DESCRIPTION: 'Maintainer needs to assign at least one label before merge'
-          BANNED_LABELS: 'banned'
+          mode: exactly
+          count: 1
+          labels: "bug,feature,enhancement,breaking,tests,documentation,internal,dependencies"
+          message: "Maintainer needs to assign at least one label before merge"
