--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,8 @@
   <properties>
     <java.version>1.8</java.version>
     <hpi-plugin.version>3.51</hpi-plugin.version>
+    <scmTag>HEAD</scmTag>
+
     <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
     <maven-deploy-plugin.version>3.1.1</maven-deploy-plugin.version>
     <maven.compiler.source>${java.version}</maven.compiler.source>
